...
                } else {
                    currencySectionSection
                    productListSection
                }
            }.navigationBarItems(leading:
                NavigationLink(destination: viewModel.summaryView) {
                    Text("Checkout")
                }, trailing:
                NavigationLink(destination: viewModel.cartView) {
                    Text("CART: \(viewModel.numberOfProductsInCart)")
                }
            ).navigationBarTitle(Text("Awesome Store"), displayMode: .inline)
        }
    }
}

private extension ProductListView {

...
